--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ngày Hôm Nay</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            font-size: 24px;
+            background-color: #f4f4f4;
+            padding: 20px;
+        }
+        #date {
+            font-weight: bold;
+            color: #333;
+        }
+    </style>
+</head>
+<body>
+    <div id="date"></div>
+    <script>
+        var today = new Date();
+        var options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+        document.getElementById("date").innerHTML = today.toLocaleDateString("vi-VN", options);
+    </script>
+</body>
+</html>
